# Lawzio

./: .replit  README.md  alll.py  app.py  metrics.py  mini.py  model performance.py  precison.py  pyproject.toml
.streamlit/: config.toml
attached_assets/: Pasted--translation-module-py-from-googletrans-import-Translator-as-GoogleTranslator-from-transformers-1745684019538.txt  Pasted-Prompt-to-Check-Project-Functionality-1-Legal-Document-Analysis-Goal-Does-the-system-automatical-1745677075437.txt  Pasted-Translation-method-used-Enhanced-Tamil-Template--1745682304886.txt  Pasted-ranslation-method-used-Enhanced-Tamil-Template--1745681829430.txt
utils/: __init__.py  database.py  direct_translator.py  document_processor.py  encryption.py  google_translate.py  history.py  indic_translator.py  localization.py  nllb_translator.py  openai_helper.py  risk_assessment.py  translator.py
