[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "anthropic>=0.50.0",
    "ctranslate2>=4.6.0",
    "googletrans>=4.0.2",
    "indic-nlp-library>=0.92",
    "langdetect>=1.0.9",
    "openai>=1.76.0",
    "pdf2image>=1.17.0",
    "pillow>=11.2.1",
    "pypdf2>=3.0.1",
    "pytesseract>=0.3.13",
    "python-docx>=1.1.2",
    "sacremoses>=0.1.1",
    "sentencepiece>=0.2.0",
    "streamlit>=1.44.1",
]
